--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ node_modules/
 .env.test.local
 .env.production.local
 
+*.env
+
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -37,3 +40,7 @@ parser/*.png
 parser/images/
 
 *.rest
+
+*.cache
+
+admin.json
