--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,11 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.2.1",
+		"firebase-admin": "^9.5.0",
 		"helmet": "^4.4.1",
 		"mongoose": "^5.11.18",
 		"morgan": "^1.10.0",
-		"multer": "^1.4.2",
-		"nanoid": "^3.1.20",
 		"node-fetch": "^2.6.1",
-		"sharp": "^0.27.2",
 		"uuid": "^8.3.2"
 	},
 	"name": "server",
